<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/prefs_category_server">
        <EditTextPreference
            android:defaultValue="@string/prefs_port_default"
            android:inputType="number"
            android:key="server_port"
            android:summary="@string/prefs_port_summary"
            android:title="@string/prefs_port_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="server_start_on_boot"
            android:summary="@string/prefs_autostart_summary"
            android:title="@string/prefs_autostart_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about">
        <Preference
            android:key="about"
            android:title="@string/about" />
    </PreferenceCategory>

</PreferenceScreen>