<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <Button
        android:id="@+id/btnStartStop"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/btnStart" />

    <TextView
        android:id="@+id/txtServerStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/btnStartStop"
        android:layout_toStartOf="@id/btnStartStop"
        android:text="@string/server_not_running" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/btnStartStop"
        android:text="@string/status" />

    <TextView
        android:id="@+id/txtStatus"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:layout_below="@id/textView4"
        android:layout_above="@id/layoutPermissions"
        android:background="@drawable/border"
        android:text="@string/not_running" />

    <LinearLayout
        android:id="@+id/layoutPermissions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/permissionsStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ungranted_permissions" />
    </LinearLayout>

</RelativeLayout>