<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.design.widget.TabLayout
        android:id="@+id/fragmentTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabBackground="@color/primaryColor">

        <android.support.design.widget.TabItem
            android:id="@+id/tabStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_home_24dp"
            android:text="@string/status" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabPaths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_folder_open_24dp"
            android:text="@string/tab_paths" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_settings_24dp"
            android:text="@string/tab_settings" />
    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/fragmentPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>