<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/btnUpwards"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:background="?android:attr/selectableItemBackground"
        android:scaleType="fitCenter"
        android:layout_margin="5dp"
        android:contentDescription="@string/btnupwards_desc"
        app:srcCompat="@drawable/ic_arrow_upward_24dp" />

    <TextView
        android:id="@+id/labelCurrent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/btnUpwards"
        android:layout_alignTop="@id/btnUpwards"
        android:text="@string/directory_picker_current"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtCurrentDir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/labelCurrent"
        android:layout_below="@id/labelCurrent" />

    <View
        android:id="@+id/separator1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/btnUpwards"
        android:background="@color/secondaryColor" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/directoriesRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/separator1"
        android:layout_above="@id/separator2"
        android:orientation="vertical"
        android:scrollbars="vertical"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        tools:listitem="@layout/directory_picker_directory" />

    <View
        android:id="@+id/separator2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/bottomButtons"
        android:background="@color/primaryColor" />

    <LinearLayout
        android:id="@+id/bottomButtons"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
        
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/primaryColor"/>

        <Button
            android:id="@+id/btnSelect"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select" />

    </LinearLayout>

</RelativeLayout>